--- a/static/index.html
+++ b/static/index.html
@@ -2,13 +2,31 @@
 <html>
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ToDo</title>
+  <link rel="stylesheet" type="text/css" media="all" href="https://cdn.bootcss.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
+  <link href="https://cdn.bootcss.com/material-design-icons/3.0.1/iconfont/material-icons.min.css" rel="stylesheet">
+  <link href="https://cdn.bootcss.com/react-datetime/2.10.1/css/react-datetime.min.css" rel="stylesheet">
   <link rel="stylesheet" type="text/css" media="all" href="/assets/css/style.css">
 </head>
 <body>
-
-<script src="https://cdn.bootcss.com/react/15.6.1/react.min.js"></script>
-<script src="/assets/js/app.js"></script>
+  <div id="app">
+  </div>
+  <script src="https://cdn.bootcss.com/react/15.6.1/react.js"></script>
+  <script src="https://cdn.bootcss.com/react/15.6.1/react-dom.js"></script>
+  <script src="https://cdn.bootcss.com/prop-types/15.5.10/prop-types.min.js"></script>
+  <script src="https://cdn.bootcss.com/fetch/2.0.3/fetch.min.js"></script>
+  <script src="https://cdn.bootcss.com/moment.js/2.18.1/moment.min.js"></script>
+  <!--<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.bootcss.com/popper.js/1.12.5/popper.min.js"></script>
+  <script src="https://cdn.bootcss.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>-->
+  <script src="https://cdn.bootcss.com/react-transition-group/1.2.0/react-transition-group.js"></script>
+  <script src="https://cdn.bootcss.com/reactstrap/4.8.0/reactstrap.min.js"></script>
+  <script src="https://cdn.bootcss.com/react-datetime/2.10.1/react-datetime.js"></script>
+  <script src="/assets/js/app.js"></script>
+  <script src="/assets/js/request.js"></script>
+  <script src="/assets/js/components.js"></script>
+  <script src="/assets/js/containers.js"></script>
 
 </body>
 </html>
